View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024222 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-10-04 15:05 | 2013-12-19 13:58 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024222: Compiler warnings 'unreacheable code' and 'conditional expression is constant' in MOA | ||||
Description | Warning 29 warning C4702: unreachable code d:\occt\src\qanewmodtopope\qanewmodtopope_glue_wire.cxx 982 TKQADraw Warning 6 warning C4127: conditional expression is constant D:\occt\inc\IntCurveSurface_Polyhedron.gxx 198 TKGeomAlgo Warning 7 warning C4127: conditional expression is constant D:\occt\inc\IntCurveSurface_Polyhedron.gxx 289 TKGeomAlgo | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Dear ifv, Please, test the current state of branch CR24222 to be sure it is still ok. |
|
Ok for IntCurveSurface_Polyhedron.gxx For second file: if (aCurPar > aFPar && aCurPar < aLPar) { aBuilder.Add(anEdge, aCurVtx); } break; It is bug, code must be: if (aCurPar > aFPar && aCurPar < aLPar) { aBuilder.Add(anEdge, aCurVtx); break; } So, // Search for the split the current vertex belongs to. for (; anEdgeIter.More(); anEdgeIter.Next()) .... cannot be replaced by if(...) |
|
Dear ifv, Please, test the current state of branch CR24222 to be sure it is still ok. |
|
OK |
|
Dear BugMaster, Branch CR24222 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 5607c034edb922f7d375209643338c2c2e4e5462 Number of compiler warnings: occt component : Linux: 424 (424 on master) Windows: 6 (9 on master) products component : Linux: (189 on master) Windows: 287 (287 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: Total MEMORY difference: 365786044 / 367122200 Total CPU difference: 42408.990000001024 / 44590.37000000126 Testing on Windows: Total MEMORY difference: 431345668 / 433395420 Total CPU difference: 49655.546875 / 41888.765625 There are not differences in images found by testdiff. |
occt: master 617cf082 2013-10-10 10:43:03
Committer: bugmaster Details Diff |
0024222: Compiler warnings 'unreacheable code' and 'conditional expression is constant' in MOA Eliminated MSVS L4 warnings. fixed incorrect break invoking in edge searching in SplitEdge. |
Affected Issues 0024222 |
|
mod - src/IntCurveSurface/IntCurveSurface_Polyhedron.gxx | Diff File | ||
mod - src/QANewModTopOpe/QANewModTopOpe_Glue_wire.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-10-04 15:05 |
|
New Issue | |
2013-10-04 15:05 |
|
Assigned To | => aml |
2013-10-04 15:06 |
|
Relationship added | child of 0024167 |
2013-10-04 15:07 |
|
View Status | private => public |
2013-10-04 16:30 |
|
Status | new => assigned |
2013-10-04 16:56 |
|
Note Added: 0025905 | |
2013-10-04 16:56 |
|
Assigned To | aml => ifv |
2013-10-04 16:56 |
|
Status | assigned => resolved |
2013-10-04 17:52 |
|
Note Added: 0025908 | |
2013-10-04 17:52 |
|
Assigned To | ifv => aml |
2013-10-04 17:52 |
|
Status | resolved => feedback |
2013-10-07 09:34 |
|
Note Added: 0025925 | |
2013-10-07 09:34 |
|
Assigned To | aml => ifv |
2013-10-07 09:34 |
|
Status | feedback => resolved |
2013-10-07 10:11 |
|
Note Added: 0025926 | |
2013-10-07 10:11 |
|
Status | resolved => reviewed |
2013-10-07 10:43 |
|
Assigned To | ifv => mkv |
2013-10-08 09:13 |
|
Note Added: 0025947 | |
2013-10-08 09:14 |
|
Test case number | => Not needed |
2013-10-08 09:14 |
|
Assigned To | mkv => bugmaster |
2013-10-08 09:14 |
|
Status | reviewed => tested |
2013-10-10 12:23 | bugmaster | Target Version | => 6.7.0 |
2013-10-11 13:35 | bugmaster | Changeset attached | => occt master 617cf082 |
2013-10-11 13:35 | bugmaster | Status | tested => verified |
2013-10-11 13:35 | bugmaster | Resolution | open => fixed |
2013-12-19 13:51 | bugmaster | Status | verified => closed |
2013-12-19 13:58 | bugmaster | Fixed in Version | => 6.7.0 |