0024222: Compiler warnings 'unreacheable code' and 'conditional expression is constant' in MOA

Eliminated MSVS L4 warnings.
fixed incorrect break invoking in edge searching in SplitEdge.